# WPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wanglei/wplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CppCallJavaUtils.cpp  CppCallJavaUtils.h  SafeQuene.cpp  SafeQuene.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  WFFmpeg.cpp  WFFmpeg.h  macro.h  native-lib.cpp
app/src/main/java/com/wanglei/wplayer/: MainActivity.java  PlayerActivity.java  WPlayer.java
app/src/main/java/com/wanglei/wplayer/audio/: AACEncoder.java  AudioCapture.java  AudioPlayer.java  AudioRecordActivity.java  AudioTest.java  FileUtils.java  WaveDecoder.java  WaveEncoder.java
app/src/main/java/com/wanglei/wplayer/audio/wav/: WaveHeader.java  WaveHelper.java  WaveReader.java  WaveWriter.java
app/src/main/java/com/wanglei/wplayer/audioplayer/: AACEncoder.java  AudioCapture.java  AudioPlayer.java  AudioRecordActivity.java  FileUtils.java  WaveEncoder.java
app/src/main/java/com/wanglei/wplayer/audioplayer/wav/: WaveHeader.java  WaveHelper.java  WaveReader.java  WaveWriter.java
app/src/main/res/layout/: activity_audio_record.xml  activity_main.xml  activity_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wanglei/wplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
video/: 4.m4a
